# ats-resume-builder

./: .gitignore  LICENSE  README.md  profile.example.yaml  prompt.md  pyproject.toml  template.html
archive/: prompt.md
src/ats_mcp/: __init__.py  gdrive.py  models.py  pdf.py  profile.py  prompt.md  renderer.py  server.py  template.html
